# donat-pool-onchain

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ErrorCodes.md  LICENSE  README.md  cabal.project  donat-pool-contracts.cabal  flake.nix
app/: CopyScripts.hs  Main.hs
src/: ScriptContext.hs
src/Ext/Plutarch/Extra/: ApiV2.hs  Bool.hs  Time.hs
src/Ext/Plutus/: MinAda.hs
src/Ext/Ply/Plutarch/: TypedWriter.hs
src/FeePool/: Datum.hs  Models.hs  Redeemer.hs  Validator.hs
src/FeePool/FeePoolInfo/: Datum.hs  Models.hs  Redeemer.hs  Validator.hs
src/Fundraising/: Datum.hs  Model.hs  Redeemer.hs  Validator.hs
src/Governance/: Datum.hs  Redeemer.hs  Validator.hs
src/Governance/Proposal/: Datum.hs  Model.hs  Redeemer.hs  Validator.hs
src/MintingPolicy/: Governance.hs  NFT.hs  Proposal.hs  VerToken.hs
src/Protocol/: Datum.hs  Model.hs  Redeemer.hs  Validator.hs
src/ScriptContext/: V1.hs  V2.hs
src/Shared/: Checks.hs  ScriptContextV2.hs
src/StakingPool/: Datum.hs  Models.hs  Redeemer.hs  Validator.hs
src/StakingPool/StakingPoolInfo/: Datum.hs  Redeemer.hs  Validator.hs
src/Validator/: AlwaysSucceeds.hs  TestValidator.hs
