cabal-version:      3.6
name:               donat-pool-contracts
version:            0.1.0.0
license:
author:             Metalamp
maintainer:         oklimenko92@mail.ru
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common common-configs
  default-language: Haskell2010

common common-deps
  build-depends:
    , base
    , filepath
    , generics-sop
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , ply-plutarch
    , text

common common-lang
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

library
  import:          common-lang
  import:          common-configs
  import:          common-deps
  hs-source-dirs:  src
  exposed-modules:
    Ext.Plutarch.Extra.ApiV2
    Ext.Plutarch.Extra.Bool
    Ext.Plutarch.Extra.Time
    Ext.Plutus.MinAda
    Ext.Ply.Plutarch.TypedWriter
    FeePool.Datum
    FeePool.FeePoolInfo.Datum
    FeePool.FeePoolInfo.Models
    FeePool.FeePoolInfo.Redeemer
    FeePool.Redeemer
    Fundraising.Datum
    Fundraising.Model
    Fundraising.Redeemer
    Fundraising.Validator
    Governance.Datum
    Governance.Proposal.Datum
    Governance.Proposal.Model
    Governance.Proposal.Redeemer
    Governance.Proposal.Validator
    Governance.Redeemer
    Governance.Validator
    MintingPolicy.Governance
    MintingPolicy.NFT
    MintingPolicy.Proposal
    MintingPolicy.VerToken
    Protocol.Datum
    Protocol.Model
    Protocol.Redeemer
    Protocol.Validator
    Shared.Checks
    Shared.ScriptContextV2

executable compile
  import:         common-lang
  import:         common-configs
  import:         common-deps
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  donat-pool-contracts

executable copy-scripts
  import:         common-lang
  import:         common-configs
  import:         common-deps
  main-is:        CopyScripts.hs
  hs-source-dirs: app
  ghc-options:    -threaded
  build-depends:
    , aeson
    , aeson-casing
    , aeson-pretty
    , bytestring
    , directory
